core/Examples/Errors/error3.k
<type> a <is> {};
<type> a <is> ['a, 'b toto];

<type> b <is> ['a, 'b toto];
<type> b <is> ['a, 'b toto];
